AbnfToAntlr.Common/AbnfAstParser.cs
/*

    Copyright 2012-2013 Robert Pinchbeck
  
    This file is part of AbnfToAntlr.

    AbnfToAntlr is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    AbnfToAntlr is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with AbnfToAntlr.  If not, see <http://www.gnu.org/licenses/>.
  
*/

//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 AbnfAst.g 2012-11-12 22:26:59

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
public partial class AbnfAstParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALTERNATION_NODE", "ASTERISK", "BIN_VAL_CONCAT_NODE", "BIN_VAL_NODE", "BIN_VAL_NUMBER_NODE", "BIN_VAL_PREFIX", "BIN_VAL_RANGE_NODE", "CHAR_VAL", "CHAR_VAL_NODE", "COMMENT", "CONCATENATION_NODE", "CR", "CRLF", "DASH", "DEC_VAL_CONCAT_NODE", "DEC_VAL_NODE", "DEC_VAL_NUMBER_NODE", "DEC_VAL_PREFIX", "DEC_VAL_RANGE_NODE", "DQUOTE", "EXACT_OCCURENCES", "GROUP_NODE", "HEX_ALPHA", "HEX_VAL_CONCAT_NODE", "HEX_VAL_NODE", "HEX_VAL_NUMBER_NODE", "HEX_VAL_PREFIX", "HEX_VAL_RANGE_NODE", "HTAB", "LF", "NUMBER_NODE", "ONE", "ONE_OCCURENCE", "OPTION_NODE", "ORMORE_OCCURENCES", "OTHER_ALPHA", "OTHER_DIGIT", "PROSE_VAL", "PROSE_VAL_NODE", "REPEAT_NODE", "REPETITION_NODE", "RULE_LIST_NODE", "RULE_NAME_NODE", "RULE_NODE", "SP", "VCHAR", "WSP", "ZERO", "ZERO_OCCURENCES", "'('", "')'", "'.'", "'/'", "'='", "'=/'", "'['", "']'"
	};
	public const int EOF=-1;
	public const int ALTERNATION_NODE=4;
	public const int ASTERISK=5;
	public const int BIN_VAL_CONCAT_NODE=6;
	public const int BIN_VAL_NODE=7;
	public const int BIN_VAL_NUMBER_NODE=8;
	public const int BIN_VAL_PREFIX=9;
	public const int BIN_VAL_RANGE_NODE=10;
	public const int CHAR_VAL=11;
	public const int CHAR_VAL_NODE=12;
	public const int COMMENT=13;
	public const int CONCATENATION_NODE=14;
	public const int CR=15;
	public const int CRLF=16;
	public const int DASH=17;
	public const int DEC_VAL_CONCAT_NODE=18;
	public const int DEC_VAL_NODE=19;
	public const int DEC_VAL_NUMBER_NODE=20;
	public const int DEC_VAL_PREFIX=21;
	public const int DEC_VAL_RANGE_NODE=22;
	public const int DQUOTE=23;
	public const int EXACT_OCCURENCES=24;
	public const int GROUP_NODE=25;
	public const int HEX_ALPHA=26;
	public const int HEX_VAL_CONCAT_NODE=27;
	public const int HEX_VAL_NODE=28;
	public const int HEX_VAL_NUMBER_NODE=29;
	public const int HEX_VAL_PREFIX=30;
	public const int HEX_VAL_RANGE_NODE=31;
	public const int HTAB=32;
	public const int LF=33;
	public const int NUMBER_NODE=34;
	public const int ONE=35;
	public const int ONE_OCCURENCE=36;
	public const int OPTION_NODE=37;
	public const int ORMORE_OCCURENCES=38;
	public const int OTHER_ALPHA=39;
	public const int OTHER_DIGIT=40;
	public const int PROSE_VAL=41;
	public const int PROSE_VAL_NODE=42;
	public const int REPEAT_NODE=43;
	public const int REPETITION_NODE=44;
	public const int RULE_LIST_NODE=45;
	public const int RULE_NAME_NODE=46;
	public const int RULE_NODE=47;
	public const int SP=48;
	public const int VCHAR=49;
	public const int WSP=50;
	public const int ZERO=51;
	public const int ZERO_OCCURENCES=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;

	public AbnfAstParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public AbnfAstParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return AbnfAstParser.tokenNames; } }
	public override string GrammarFileName { get { return "AbnfAst.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_start();
	partial void LeaveRule_start();
	// $ANTLR start "start"
	// AbnfAst.g:77:8: public start : rulelist ;
	[GrammarRule("start")]
	public AstParserRuleReturnScope<CommonTree, IToken> start()
	{
		EnterRule_start();
		EnterRule("start", 1);
		TraceIn("start", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> rulelist1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "start");
		DebugLocation(77, 2);
		try
		{
			// AbnfAst.g:78:2: ( rulelist )
			DebugEnterAlt(1);
			// AbnfAst.g:79:3: rulelist
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(79, 3);
			PushFollow(Follow._rulelist_in_start166);
			rulelist1=rulelist();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, rulelist1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("start", 1);
			LeaveRule("start", 1);
			LeaveRule_start();
		}
		DebugLocation(80, 2);
		} finally { DebugExitRule(GrammarFileName, "start"); }
		return retval;

	}
	// $ANTLR end "start"

	partial void EnterRule_rulelist();
	partial void LeaveRule_rulelist();
	// $ANTLR start "rulelist"
	// AbnfAst.g:82:1: rulelist : ( rule | ( ( c_wsp )* ( c_nl )=> c_nl ) )+ -> ^( RULE_LIST_NODE ( rule )+ ) ;
	[GrammarRule("rulelist")]
	private AstParserRuleReturnScope<CommonTree, IToken> rulelist()
	{
		EnterRule_rulelist();
		EnterRule("rulelist", 2);
		TraceIn("rulelist", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> rule2 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> c_wsp3 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> c_nl4 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		RewriteRuleSubtreeStream stream_rule=new RewriteRuleSubtreeStream(adaptor,"rule rule");
		RewriteRuleSubtreeStream stream_c_wsp=new RewriteRuleSubtreeStream(adaptor,"rule c_wsp");
		RewriteRuleSubtreeStream stream_c_nl=new RewriteRuleSubtreeStream(adaptor,"rule c_nl");
		try { DebugEnterRule(GrammarFileName, "rulelist");
		DebugLocation(82, 2);
		try
		{
			// AbnfAst.g:83:2: ( ( rule | ( ( c_wsp )* ( c_nl )=> c_nl ) )+ -> ^( RULE_LIST_NODE ( rule )+ ) )
			DebugEnterAlt(1);
			// AbnfAst.g:84:3: ( rule | ( ( c_wsp )* ( c_nl )=> c_nl ) )+
			{
			DebugLocation(84, 3);
			// AbnfAst.g:84:3: ( rule | ( ( c_wsp )* ( c_nl )=> c_nl ) )+
			int cnt2=0;
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=3;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==HEX_ALPHA||LA2_1==OTHER_ALPHA))
				{
					alt2 = 1;
				}
				else if ((LA2_1==COMMENT||LA2_1==CRLF||LA2_1==WSP))
				{
					alt2 = 2;
				}


				} finally { DebugExitDecision(2); }
				switch (alt2)
				{
				case 1:
					DebugEnterAlt(1);
					// AbnfAst.g:84:5: rule
					{
					DebugLocation(84, 5);
					PushFollow(Follow._rule_in_rulelist182);
					rule2=rule();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_rule.Add(rule2.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// AbnfAst.g:84:12: ( ( c_wsp )* ( c_nl )=> c_nl )
					{
					DebugLocation(84, 12);
					// AbnfAst.g:84:12: ( ( c_wsp )* ( c_nl )=> c_nl )
					DebugEnterAlt(1);
					// AbnfAst.g:84:13: ( c_wsp )* ( c_nl )=> c_nl
					{
					DebugLocation(84, 13);
					// AbnfAst.g:84:13: ( c_wsp )*
					try { DebugEnterSubRule(1);
					while (true)
					{
						int alt1=2;
						try { DebugEnterDecision(1, false);
						switch (input.LA(1))
						{
						case COMMENT:
							{
							int LA1_2 = input.LA(2);

							if ((LA1_2==WSP))
							{
								int LA1_3 = input.LA(3);

								if ((true))
								{
									alt1 = 1;
								}


							}


							}
							break;
						case CRLF:
							{
							int LA1_2 = input.LA(2);

							if ((LA1_2==WSP))
							{
								int LA1_3 = input.LA(3);

								if ((true))
								{
									alt1 = 1;
								}


							}


							}
							break;
						case WSP:
							{
							alt1 = 1;
							}
							break;
						}

						} finally { DebugExitDecision(1); }
						switch ( alt1 )
						{
						case 1:
							DebugEnterAlt(1);
							// AbnfAst.g:84:13: c_wsp
							{
							DebugLocation(84, 13);
							PushFollow(Follow._c_wsp_in_rulelist187);
							c_wsp3=c_wsp();
							PopFollow();
							if (state.failed) return retval;
							if (state.backtracking == 0) stream_c_wsp.Add(c_wsp3.Tree);

							}
							break;

						default:
							goto loop1;
						}
					}

					loop1:
						;

					} finally { DebugExitSubRule(1); }

					DebugLocation(84, 28);
					PushFollow(Follow._c_nl_in_rulelist194);
					c_nl4=c_nl();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_c_nl.Add(c_nl4.Tree);

					}


					}
					break;

				default:
					if (cnt2 >= 1)
						goto loop2;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee2 = new EarlyExitException( 2, input );
					DebugRecognitionException(eee2);
					throw eee2;
				}
				cnt2++;
			}
			loop2:
				;

			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: rule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 84:37: -> ^( RULE_LIST_NODE ( rule )+ )
			{
				DebugLocation(84, 40);
				// AbnfAst.g:84:40: ^( RULE_LIST_NODE ( rule )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(84, 42);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(RULE_LIST_NODE, "RULE_LIST_NODE"), root_1);

				DebugLocation(84, 57);
				if (!(stream_rule.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_rule.HasNext )
				{
					DebugLocation(84, 57);
					adaptor.AddChild(root_1, stream_rule.NextTree());

				}
				stream_rule.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("rulelist", 2);
			LeaveRule("rulelist", 2);
			LeaveRule_rulelist();
		}
		DebugLocation(85, 2);
		} finally { DebugExitRule(GrammarFileName, "rulelist"); }
		return retval;

	}
	// $ANTLR end "rulelist"

	partial void EnterRule_rule();
	partial void LeaveRule_rule();
	// $ANTLR start "rule"
	// AbnfAst.g:87:1: rule : rulename defined_as elements c_nl -> ^( RULE_NODE rulename elements ) ;
	[GrammarRule("rule")]
	private AstParserRuleReturnScope<CommonTree, IToken> rule()
	{
		EnterRule_rule();
		EnterRule("rule", 3);
		TraceIn("rule", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> rulename5 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> defined_as6 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> elements7 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> c_nl8 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		RewriteRuleSubtreeStream stream_rulename=new RewriteRuleSubtreeStream(adaptor,"rule rulename");
		RewriteRuleSubtreeStream stream_defined_as=new RewriteRuleSubtreeStream(adaptor,"rule defined_as");
		RewriteRuleSubtreeStream stream_elements=new RewriteRuleSubtreeStream(adaptor,"rule elements");
		RewriteRuleSubtreeStream stream_c_nl=new RewriteRuleSubtreeStream(adaptor,"rule c_nl");
		try { DebugEnterRule(GrammarFileName, "rule");
		DebugLocation(87, 2);
		try
		{
			// AbnfAst.g:88:2: ( rulename defined_as elements c_nl -> ^( RULE_NODE rulename elements ) )
			DebugEnterAlt(1);
			// AbnfAst.g:89:3: rulename defined_as elements c_nl
			{
			DebugLocation(89, 3);
			PushFollow(Follow._rulename_in_rule221);
			rulename5=rulename();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_rulename.Add(rulename5.Tree);
			DebugLocation(89, 12);
			PushFollow(Follow._defined_as_in_rule223);
			defined_as6=defined_as();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_defined_as.Add(defined_as6.Tree);
			DebugLocation(89, 23);
			PushFollow(Follow._elements_in_rule225);
			elements7=elements();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_elements.Add(elements7.Tree);
			DebugLocation(89, 32);
			PushFollow(Follow._c_nl_in_rule227);
			c_nl8=c_nl();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_c_nl.Add(c_nl8.Tree);


			{
			// AST REWRITE
			// elements: rulename, elements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 89:37: -> ^( RULE_NODE rulename elements )
			{
				DebugLocation(89, 40);
				// AbnfAst.g:89:40: ^( RULE_NODE rulename elements )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(89, 42);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(RULE_NODE, "RULE_NODE"), root_1);

				DebugLocation(89, 52);
				adaptor.AddChild(root_1, stream_rulename.NextTree());
				DebugLocation(89, 61);
				adaptor.AddChild(root_1, stream_elements.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("rule", 3);
			LeaveRule("rule", 3);
			LeaveRule_rule();
		}
		DebugLocation(92, 2);
		} finally { DebugExitRule(GrammarFileName, "rule"); }
		return retval;

	}
	// $ANTLR end "rule"

	partial void EnterRule_rulename();
	partial void LeaveRule_rulename();
	// $ANTLR start "rulename"
	// AbnfAst.g:94:1: rulename : rulechars -> ^( RULE_NAME_NODE rulechars ) ;
	[GrammarRule("rulename")]
	private AstParserRuleReturnScope<CommonTree, IToken> rulename()
	{
		EnterRule_rulename();
		EnterRule("rulename", 4);
		TraceIn("rulename", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> rulechars9 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		RewriteRuleSubtreeStream stream_rulechars=new RewriteRuleSubtreeStream(adaptor,"rule rulechars");
		try { DebugEnterRule(GrammarFileName, "rulename");
		DebugLocation(94, 2);
		try
		{
			// AbnfAst.g:95:2: ( rulechars -> ^( RULE_NAME_NODE rulechars ) )
			DebugEnterAlt(1);
			// AbnfAst.g:96:3: rulechars
			{
			DebugLocation(96, 3);
			PushFollow(Follow._rulechars_in_rulename257);
			rulechars9=rulechars();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_rulechars.Add(rulechars9.Tree);


			{
			// AST REWRITE
			// elements: rulechars
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 96:13: -> ^( RULE_NAME_NODE rulechars )
			{
				DebugLocation(96, 16);
				// AbnfAst.g:96:16: ^( RULE_NAME_NODE rulechars )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(96, 18);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(RULE_NAME_NODE, "RULE_NAME_NODE"), root_1);

				DebugLocation(96, 33);
				adaptor.AddChild(root_1, stream_rulechars.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("rulename", 4);
			LeaveRule("rulename", 4);
			LeaveRule_rulename();
		}
		DebugLocation(97, 2);
		} finally { DebugExitRule(GrammarFileName, "rulename"); }
		return retval;

	}
	// $ANTLR end "rulename"

	partial void EnterRule_rulechars();
	partial void LeaveRule_rulechars();
	// $ANTLR start "rulechars"
	// AbnfAst.g:99:1: rulechars : ( HEX_ALPHA | OTHER_ALPHA ) ( HEX_ALPHA | OTHER_ALPHA | ZERO | ONE | OTHER_DIGIT | DASH )* ;
	[GrammarRule("rulechars")]
	private AstParserRuleReturnScope<CommonTree, IToken> rulechars()
	{
		EnterRule_rulechars();
		EnterRule("rulechars", 5);
		TraceIn("rulechars", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken set10 = default(IToken);
		IToken set11 = default(IToken);
